html-parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = function(m) {return m;},
        peg$c2 = function(c) { return {type: "comment", line: line()}; },
        peg$c3 = peg$FAILED,
        peg$c4 = function(o, m, c) {
        		o.offset = offset();
        		o.innerOffset = o.end,
        		delete o.end;
        		o.innerEnd = c;
        		o.value = m; 
        		openedName.pop();
        		return o;
        	},
        peg$c5 = "<",
        peg$c6 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c7 = function(name) { return testInElement(name) },
        peg$c8 = void 0,
        peg$c9 = ">",
        peg$c10 = { type: "literal", value: ">", description: "\">\"" },
        peg$c11 = function(name, attrs) { 
        		openedName.push(name);
        		//console.log(line() + ' -> '+ name);
        		
        		return {
        			type: "element",
        			element : name,
        			attrs: attrs,
        			line: line(),
        			end: peg$currPos,
        			$:"(^.^)"
        		};
        	},
        peg$c12 = "/>",
        peg$c13 = { type: "literal", value: "/>", description: "\"/>\"" },
        peg$c14 = function(name, attrs) {	return { type:"element", element: name, attrs: attrs, $:"(-,-)", value: null }; },
        peg$c15 = function(name) {  return testInElement(name);  },
        peg$c16 = null,
        peg$c17 = "/",
        peg$c18 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c19 = function(name, attrs) {
        		return { type:"element", element: name, attrs: attrs, $:"(T_T)" };
        	},
        peg$c20 = "</",
        peg$c21 = { type: "literal", value: "</", description: "\"</\"" },
        peg$c22 = function(name) { return testOutElement(name) },
        peg$c23 = function(name) {	return offset(); },
        peg$c24 = function(name) { return {closetag: name}; },
        peg$c25 = "=",
        peg$c26 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c27 = function(name, a) {
        		var r = {
        			name: name
        		};
        		if(a !== null){
        			r.value = a[3].value;
        			r.vOffset = a[3].offset;
        			r.vEnd = a[3].end;
        		}
        		return r;
        	},
        peg$c28 = /^[^ \t\n\r>\/=]/,
        peg$c29 = { type: "class", value: "[^ \\t\\n\\r>\\/=]", description: "[^ \\t\\n\\r>\\/=]" },
        peg$c30 = function(c) { return text(); },
        peg$c31 = function(q) { return {value: q, offset: offset() +1, end: peg$currPos - 1}; },
        peg$c32 = /^[^ ]/,
        peg$c33 = { type: "class", value: "[^ ]", description: "[^ ]" },
        peg$c34 = function(c) { return {value: text(), offset: offset(), end:  peg$currPos} },
        peg$c35 = /^[^<]/,
        peg$c36 = { type: "class", value: "[^<]", description: "[^<]" },
        peg$c37 = function(c) {
        		return {
        			type: 'text',
        			text: text(),
        			line: line(),
        			column: column(),
        			offset: offset(),
        			end:  peg$currPos
        		}; 
        	},
        peg$c38 = { type: "other", description: "skip" },
        peg$c39 = { type: "other", description: "white space" },
        peg$c40 = /^[\n\r\t\x0B\f \xA0\uFEFF]/,
        peg$c41 = { type: "class", value: "[\\n\\r\\t\\x0B\\f \\xA0\\uFEFF]", description: "[\\n\\r\\t\\x0B\\f \\xA0\\uFEFF]" },
        peg$c42 = function() {return '';},
        peg$c43 = /^[ \xA0\u1680\u180E\u2000\u2001\u2002\u2003\u2004\u2005\u2006\u2007\u2008\u2009\u200A\u202F\u205F\u3000]/,
        peg$c44 = { type: "class", value: "[ \\xA0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000]", description: "[ \\xA0\\u1680\\u180E\\u2000\\u2001\\u2002\\u2003\\u2004\\u2005\\u2006\\u2007\\u2008\\u2009\\u200A\\u202F\\u205F\\u3000]" },
        peg$c45 = "<!--",
        peg$c46 = { type: "literal", value: "<!--", description: "\"<!--\"" },
        peg$c47 = "-->",
        peg$c48 = { type: "literal", value: "-->", description: "\"-->\"" },
        peg$c49 = { type: "any", description: "any character" },
        peg$c50 = function(c) {
        		var ret = ''
        		c.forEach(function(e){
        			ret += e[1];
        		});
        		return ret;
        	},
        peg$c51 = { type: "other", description: "StringLiteral" },
        peg$c52 = "\"",
        peg$c53 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c54 = /^[^"\\]/,
        peg$c55 = { type: "class", value: "[^\"\\\\]", description: "[^\"\\\\]" },
        peg$c56 = "\\",
        peg$c57 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c58 = function(content) { return content.join("");},
        peg$c59 = "'",
        peg$c60 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c61 = /^[^'\\]/,
        peg$c62 = { type: "class", value: "[^'\\\\]", description: "[^'\\\\]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$maxFailMessage   = null,
        peg$silentFails      = 0,
        peg$userFail         = false,

        peg$cache = {},
        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      if (peg$silentFails === 0) {
        peg$expected(
          { type: "other", description: description },
          peg$reportedPos
        );
      }
      peg$userFail = true;
    }

    function error(message) {
      if (peg$silentFails === 0) {
        peg$error(message, peg$reportedPos);
      }
      peg$userFail = true;
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$expected(expected, pos) {
      if (pos < peg$maxFailPos) { return; }

      if (pos > peg$maxFailPos) {
        peg$maxFailPos = pos;
        peg$maxFailExpected = [];
        peg$maxFailMessage = null;
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$error(message, pos) {
      if (pos < peg$maxFailPos) { return; }

      if (pos > peg$maxFailPos) {
        peg$maxFailPos = pos;
        peg$maxFailExpected = [];
        peg$maxFailMessage = null;
      }

      peg$maxFailMessage = message;
    }

    function peg$buildException() {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1].description === expected[i].description) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs, expectedDesc, foundDesc, i;

        switch (expected.length) {
          case 0:
            expectedDesc = "end of input";
            break;

          case 1:
            expectedDesc = expected[0].description;
            break;

          default:
            expectedDescs = new Array(expected.length);

            for (i = 0; i < expected.length; i++) {
              expectedDescs[i] = expected[i].description;
            }

            expectedDesc = expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1];
        }

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var pos        = Math.max(peg$currPos, peg$maxFailPos),
          posDetails = peg$computePosDetails(pos),
          expected   = peg$maxFailMessage === null ? peg$maxFailExpected : null,
          found      = pos < input.length ? input.charAt(pos) : null,
          message    = peg$maxFailMessage !== null
            ? peg$maxFailMessage
            : buildMessage(expected, found);

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message,
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2;

      var key    = peg$currPos * 17 + 0,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsemess();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsemess();
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        peg$userFail = false;
        s1 = peg$c1(s1);
        if (peg$userFail) { s1 = peg$FAILED; }
      }
      if (s1 === peg$FAILED) {
        peg$currPos = s0;
        s0 = s1;
      } else {
        s0 = s1;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsemess() {
      var s0, s1;

      var key    = peg$currPos * 17 + 1,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseComment();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        peg$userFail = false;
        s1 = peg$c2(s1);
        if (peg$userFail) { s1 = peg$FAILED; }
      }
      if (s1 === peg$FAILED) {
        peg$currPos = s0;
        s0 = s1;
      } else {
        s0 = s1;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseelement();
        if (s0 === peg$FAILED) {
          s0 = peg$parsetext();
        }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseelement() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 17 + 2,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseopenTag();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsemess();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsemess();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecloseTag();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            peg$userFail = false;
            s1 = peg$c4(s1, s2, s3);
            if (peg$userFail) { s1 = peg$FAILED; }
            if (s1 === peg$FAILED) {
              peg$currPos = s0;
              s0 = s1;
            } else {
              s0 = s1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parsecompleteTag();
        if (s0 === peg$FAILED) {
          s0 = peg$parsequirkTag();
          if (s0 === peg$FAILED) {
            s0 = peg$parsequirkCloseTag();
          }
        }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseopenTag() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 17 + 3,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 60) {
        s1 = peg$c5;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$expected(peg$c6, peg$currPos); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsename();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = peg$currPos;
          s3 = peg$c7(s2);
          if (s3) {
            s3 = peg$c8;
          } else {
            s3 = peg$c3;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseattr();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseattr();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 62) {
                  s6 = peg$c9;
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$expected(peg$c10, peg$currPos); }
                }
                if (s6 !== peg$FAILED) {
                  peg$reportedPos = s0;
                  peg$userFail = false;
                  s1 = peg$c11(s2, s4);
                  if (peg$userFail) { s1 = peg$FAILED; }
                  if (s1 === peg$FAILED) {
                    peg$currPos = s0;
                    s0 = s1;
                  } else {
                    s0 = s1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c3;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsecompleteTag() {
      var s0, s1, s2, s3, s4, s5;

      var key    = peg$currPos * 17 + 4,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 60) {
        s1 = peg$c5;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$expected(peg$c6, peg$currPos); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsename();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseattr();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseattr();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c12) {
                s5 = peg$c12;
                peg$currPos += 2;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$expected(peg$c13, peg$currPos); }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                peg$userFail = false;
                s1 = peg$c14(s2, s3);
                if (peg$userFail) { s1 = peg$FAILED; }
                if (s1 === peg$FAILED) {
                  peg$currPos = s0;
                  s0 = s1;
                } else {
                  s0 = s1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsequirkTag() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      var key    = peg$currPos * 17 + 5,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 60) {
        s1 = peg$c5;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$expected(peg$c6, peg$currPos); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsename();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = peg$currPos;
          s3 = peg$c15(s2);
          if (s3) {
            s3 = peg$c3;
          } else {
            s3 = peg$c8;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseattr();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseattr();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 47) {
                  s6 = peg$c17;
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$expected(peg$c18, peg$currPos); }
                }
                if (s6 === peg$FAILED) {
                  s6 = peg$c16;
                }
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 62) {
                    s7 = peg$c9;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$expected(peg$c10, peg$currPos); }
                  }
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    peg$userFail = false;
                    s1 = peg$c19(s2, s4);
                    if (peg$userFail) { s1 = peg$FAILED; }
                    if (s1 === peg$FAILED) {
                      peg$currPos = s0;
                      s0 = s1;
                    } else {
                      s0 = s1;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c3;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c3;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c3;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsecloseTag() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 17 + 6,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c20) {
        s1 = peg$c20;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$expected(peg$c21, peg$currPos); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsename();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = peg$currPos;
          s3 = peg$c22(s2);
          if (s3) {
            s3 = peg$c8;
          } else {
            s3 = peg$c3;
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 62) {
              s4 = peg$c9;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$expected(peg$c10, peg$currPos); }
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              peg$userFail = false;
              s1 = peg$c23(s2);
              if (peg$userFail) { s1 = peg$FAILED; }
              if (s1 === peg$FAILED) {
                peg$currPos = s0;
                s0 = s1;
              } else {
                s0 = s1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsequirkCloseTag() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 17 + 7,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c20) {
        s1 = peg$c20;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$expected(peg$c21, peg$currPos); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsename();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = peg$currPos;
          s3 = peg$c15(s2);
          if (s3) {
            s3 = peg$c3;
          } else {
            s3 = peg$c8;
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 62) {
              s4 = peg$c9;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$expected(peg$c10, peg$currPos); }
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              peg$userFail = false;
              s1 = peg$c24(s2);
              if (peg$userFail) { s1 = peg$FAILED; }
              if (s1 === peg$FAILED) {
                peg$currPos = s0;
                s0 = s1;
              } else {
                s0 = s1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c3;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseattr() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      var key    = peg$currPos * 17 + 8,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 === peg$FAILED) {
        s1 = peg$c16;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsename();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 61) {
              s5 = peg$c25;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$expected(peg$c26, peg$currPos); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseattrValue();
                if (s7 !== peg$FAILED) {
                  s4 = [s4, s5, s6, s7];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$c3;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$c3;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$c3;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c3;
          }
          if (s3 === peg$FAILED) {
            s3 = peg$c16;
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            peg$userFail = false;
            s1 = peg$c27(s2, s3);
            if (peg$userFail) { s1 = peg$FAILED; }
            if (s1 === peg$FAILED) {
              peg$currPos = s0;
              s0 = s1;
            } else {
              s0 = s1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c3;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c3;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c3;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsename() {
      var s0, s1, s2;

      var key    = peg$currPos * 17 + 9,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = [];
      if (peg$c28.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$expected(peg$c29, peg$currPos); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c28.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$expected(peg$c29, peg$currPos); }
          }
        }
      } else {
        s1 = peg$c3;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        peg$userFail = false;
        s1 = peg$c30(s1);
        if (peg$userFail) { s1 = peg$FAILED; }
      }
      if (s1 === peg$FAILED) {
        peg$currPos = s0;
        s0 = s1;
      } else {
        s0 = s1;
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseattrValue() {
      var s0, s1, s2;

      var key    = peg$currPos * 17 + 10,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseQuote();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        peg$userFail = false;
        s1 = peg$c31(s1);
        if (peg$userFail) { s1 = peg$FAILED; }
      }
      if (s1 === peg$FAILED) {
        peg$currPos = s0;
        s0 = s1;
      } else {
        s0 = s1;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        if (peg$c32.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$expected(peg$c33, peg$currPos); }
        }
        if (s2 !== peg$FAILED) {
          while (s2 !== peg$FAILED) {
            s1.push(s2);
            if (peg$c32.test(input.charAt(peg$currPos))) {
              s2 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$expected(peg$c33, peg$currPos); }
            }
          }
        } else {
          s1 = peg$c3;
        }
        if (s1 !== peg$FAILED) {
          peg$reportedPos = s0;
          peg$userFail = false;
          s1 = peg$c34(s1);
          if (peg$userFail) { s1 = peg$FAILED; }
        }
        if (s1 === peg$FAILED) {
          peg$currPos = s0;
          s0 = s1;
        } else {
          s0 = s1;
        }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parsetext() {
      var s0, s1, s2;

      var key    = peg$currPos * 17 + 11,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }
